SERVER-77496 Change ix_scan.cpp tassert(4938500) to uassert